--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
             // }, 2000);
         } else {
             // Credenciais inválidas
-            showAlert("Credenciais invalidas, seu filho da puta", "danger");
+            showAlert("Credenciais invalidas, tente novamente", "danger");
         }
     });
 
