finalização do projeto

--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Logo</title>
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-    }
-    .container {
-      background-color: #0B0F1F;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh; /* garante que ocupe toda a altura da tela */
-      cursor: pointer; /* para indicar que pode clicar */
-      transition: opacity 0.8s ease; /* transição suave */
-      opacity: 1;
-    }
-    /* Classe para o fade out */
-    .fade-out {
-      opacity: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="estilos/estilos-index.css">
 </head>
 <body class="container">
   <img src="assets/logo.svg" alt="Logo" />
